--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "express-session": "^1.16.2",
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "pg": "^7.12.1",
+    "uuid": "^3.3.2"
   }
 }
