--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.16.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "uuid": "^3.3.2"
   }
